--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<%provide(:title,'Home') %>
+<h1>iClick2View|Home</h1>
+<p>This is the home page for the <a href="http://www.iClick2View.com">iClick2View Website</a>
+Sample application</p>
+
